Bumper til siste versjon av Java, java 15 med previews.